<resources>
    <string name="app_name">Getfix Application</string>
    <string name="login">Login</string>
    <string name="sign">SIGN UP</string>
    <string name="username">Username</string>

    <string name="WebClient">116303479224-qe4kiq0uj2dfitj8raejbd5bsgvqsja1.apps.googleusercontent.com</string>

    <string name="text_action_daftar_akun">Daftar</string>
    <string name="text_action_akun_login">Login</string>
    <string name="text_action_lupa_password">Lupa Password?</string>

    <string name="send_success">Berhasil terkirim</string>
    <string name="send_error">Gagal terkirim</string>

    <string name="text_label_register">Belum punya akun?</string>
    <string name="text_label_login">Sudah punya akun?</string>
    <string name="text_label_email">Email</string>
    <string name="text_label_password">Password</string>
    <string name="text_label_login_description">Masuk untuk menggunakan aplikasi!</string>
    <string name="text_label_register_description">Daftarkan diri anda!</string>
    <string name="our_services">Pelayanan Kami</string>
    <string name="menampilkan_menu">menampilkan menu</string>
    <string name="lo_go">logo</string>
    <string name="fitur_pencarian">fitur pencarian</string>
    <string name="fitur_notifikasi">fitur notifikasi</string>
    <string name="menuju_ke_home">menuju ke home</string>
    <string name="menuju_pembelian">menuju pembelian</string>
    <string name="menambah">menambah</string>
    <string name="fitur_chat">fitur chat</string>
    <string name="fitur_profil">fitur profil</string>
    <string name="title_activity_homee">HomeeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_chat_fragment">This is chat fragment</string>
    <string name="this_is_profile_fragment">This is profile fragment</string>
    <string name="massage">Massage</string>
    <string name="laptop">Laptop</string>
    <string name="handphone">Handphone</string>
    <string name="televisi">Televisi</string>
    <string name="komputer">Komputer</string>
    <string name="teknisi_a">Teknisi A</string>
    <string name="dekripsi">Lorem Ipsum dolor sit amet,</string>
    <string name="book">BOOK</string>
    <string name="booking">Booking</string>
    <string name="jenis_layanan">Jenis Layanan:</string>
    <string name="teknisi_laptop">Teknisi Laptop</string>
    <string name="lokasi_anda">Lokasi Anda</string>
    <string name="masukan_alamat_anda">Masukan Alamat Anda</string>
    <string name="booking_tanggal">Booking Tanggal</string>
    <string name="jam_hari_bulan_tahun">Jam/Hari/Bulan/Tahun</string>
    <string name="detail_tugas">Detail Tugas</string>
    <string name="deskripsi_tugas">Deskripsi Tugas</string>
    <string name="sisipkan_foto">Sisipkan Foto</string>
    <string name="pilih_foto">Pilih Foto</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="text_label_detail_tugas">Detail Tugas</string>
    <string name="nama">Dinda Lusita</string>
    <string name="dindafristiani_gmail_com">dindafristiani@gmail.com</string>
    <string name="saldo">50.000</string>
    <string name="akun">Akun</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="logout">Logout</string>
    <string name="mengedit_profil">mengedit profil</string>
    <string name="jumlah_saldo">jumlah saldo</string>
    <string name="tanggal_pembayaran_berhasil">23 Maret 2022, 10:30</string>
    <string name="pembayaran_berhasil">Pembayaran anda untuk pesanan 123x4xxx telah berhasil</string>
    <string name="konfirmasi_pesanan">Konfirmasi Pesanan</string>
    <string name="info_invoice">#PO0001</string>
    <string name="pemesanan_selesai">Pemesanan anda untuk pesanan 123x4xxx telah selesai</string>
    <string name="tab_text_1">Belum Selesai</string>
    <string name="tab_text_2">Selesai</string>
    <string name="status">Status</string>
    <string name="process">Process</string>
    <string name="nama_teknisi">Teknisi A</string>
    <string name="id">ID 0001</string>
    <string name="kirim_pesan">Kirim pesan</string>
    <string name="telepon">Telepon</string>
    <string name="lokasi_waktu_pengerjaan"><![CDATA[Lokasi & Waktu Pengerjaan]]></string>
    <string name="rumahku">Rumahku</string>
    <string name="alamat_rumahku">JL. Soekarno Hatta Blok. 4 A Blok ABC Jakarta Selatan, Indonesia</string>
    <string name="tanggal">02 Jan 2022</string>
    <string name="jam">08.00 – 12.00</string>
    <string name="no_pekerjaan">No. Pekerjaan:</string>
    <string name="detail_informasi">Detail informasi</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="perbaikan_layar_laptop">Perbaikan layar laptop</string>
    <string name="pesanan_selesai">Pesanan Selesai</string>
    <string name="wallet">Wallet</string>
    <string name="cash">Cash</string>
    <string name="total_biaya">Total Biaya</string>
    <string name="idr_50_000">IDR 50.000</string>
    <string name="payoder_bayar">BAYAR</string>
    <string name="detailorder_rating">Rating</string>
    <string name="error_data">Ups!! Terjadi Kesalahan</string>
    <string name="text_pilih_layanan">Pilih Layanan</string>
    <string name="text_tanggal">Tanggal</string>
    <string name="text_waktu">Waktu</string>
    <string name="text_img_desc_pilih_waktu">Pilih Waktu</string>
    <string name="text_img_desc_pilih_tanggal">Pilih Tanggal</string>
    <string name="pilih_teknisi_mu">Pilih Teknisi Mu!</string>
    <string name="pesan_sekarang">Pesan Sekarang</string>
    <string name="camera_upload">Upload</string>
    <string name="camera_batal">Batal</string>
    <string name="camera_ambil_gambar">Ambil Gambar</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="teknisi_komputer">Teknisi Komputer</string>
    <string name="teknisi_televisi">Teknisi Televisi</string>
    <string name="teknisi_handphone">Teknisi Handphone</string>
    <string name="alamat_anda">Alamat Anda</string>
    <string name="booking_pilih_area">Pilih Area</string>
    <string name="tv_label_classification">Gambarnya Adalah!</string>
    <string name="angkaRating">4.8</string>
    <string-array name="data_jenis_layanan">
        <item>Konsultasi</item>
        <item>Panggil Teknisi</item>
    </string-array>

    <string-array name="data_kota">
        <item>Jakarta</item>
        <item>Surabaya</item>
        <item>Magelang</item>
        <item>Surakarta</item>
    </string-array>
</resources>