<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/menu"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/menampilkan_menu" />

        <ImageView
            android:id="@+id/getfix_header"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:src="@drawable/getfix_logo"
            app:layout_constraintStart_toEndOf="@+id/menu"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/lo_go" />

        <ImageView
            android:id="@+id/search"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="18dp"
            android:src="@drawable/ic_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/fitur_pencarian" />

        <ImageView
            android:id="@+id/notif"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/ic_notif"
            app:layout_constraintEnd_toStartOf="@+id/search"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/fitur_notifikasi" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:background="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/our_services"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">


        <ImageView
            android:id="@+id/iv_laptop"
            android:src="@drawable/laptop"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="20dp"

            />
        <com.google.android.material.imageview.ShapeableImageView
            android:src="@drawable/touchscreen"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />
        <com.google.android.material.imageview.ShapeableImageView
            android:src="@drawable/tv"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />
        <com.google.android.material.imageview.ShapeableImageView
            android:src="@drawable/workstation"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"

            />
        <TextView
            android:id="@+id/tv_laptop"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/laptop"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"/>
        <TextView
            android:id="@+id/tv_hp"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/handphone"
            android:layout_marginStart="8dp"/>
        <TextView
            android:id="@+id/tv_televisi"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/televisi"
            android:layout_marginStart="22dp"/>
        <TextView
            android:id="@+id/tv_komputer"
            android:layout_row="1"
            android:layout_column="3"
            android:text="@string/komputer"
            android:layout_marginStart="26dp"/>
    </GridLayout>

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:text="@string/title_home"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>