<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Order.DetailOrderActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="0dp"
            app:navigationIcon="@drawable/back"
            app:title="Notifikasi"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Scrollable content -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/jenislayanan"
                style="@style/TextSubHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/lo_go"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/teknisi_laptop"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_laptop"
                app:layout_constraintStart_toEndOf="@+id/iv_laptop"
                app:layout_constraintTop_toTopOf="@+id/iv_laptop"
                app:layout_constraintVertical_bias="0.032" />

            <ImageView
                android:id="@+id/iv_laptop"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/teknisi_laptop"
                android:src="@drawable/laptop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layanan" />

            <TextView
                android:id="@+id/layanan"
                style="@style/TextSubHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/jenis_layanan"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/info_invoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="40dp"
                android:textSize="12sp"
                android:text="@string/info_invoice"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/status"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_laptop" />

            <Button
                style="@style/MaterialAlertDialog.Material3.Title.Icon"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="38dp"
                android:text="@string/process"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/info_invoice" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView1"
                android:layout_width="363dp"
                android:layout_height="150dp"
                android:layout_marginTop="50dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/purple"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_status">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/iv_foto"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="23dp"
                        android:layout_marginStart="25dp"
                        android:src="@drawable/picture"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="@string/jumlah_saldo" />

                    <TextView
                        android:id="@+id/tv_desc_nama"
                        style="@style/TextSubHead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:textSize="14sp"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/nama_teknisi"
                        app:layout_constraintStart_toEndOf="@id/iv_foto"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="30dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/id"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginStart="48dp"
                        android:layout_marginTop="18dp"
                        android:src="@drawable/chat_dot"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/iv_foto" />

                    <TextView
                        android:id="@+id/tv_kirim_pesan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kirim_pesan"
                        android:textColor="@color/white"
                        android:layout_marginBottom="35dp"
                        android:layout_marginStart="12dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView"
                        />

                    <ImageView
                        android:id="@+id/iv_telepon"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginBottom="28dp"
                        android:src="@drawable/telepon1"
                        app:layout_constraintEnd_toStartOf="@id/tv_telepon"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <TextView
                        android:id="@+id/tv_telepon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/telepon"
                        android:textColor="@color/white"
                        android:layout_marginBottom="35dp"
                        android:layout_marginEnd="48dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        />

                    <ImageView
                        android:id="@+id/iv_line_horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="50dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/line_horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <ImageView
                        android:id="@+id/iv_line_vertikal"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginBottom="28dp"
                        android:src="@drawable/line_vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/iv_telepon"
                        app:layout_constraintStart_toEndOf="@+id/tv_kirim_pesan" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_lokasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="42dp"
                android:text="@string/lokasi_waktu_pengerjaan"
                android:textStyle="bold"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardView1" />
            <TextView
                android:id="@+id/tv_rumahku"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="4dp"
                android:text="@string/rumahku"
                android:textColor="@color/purple"
                android:textStyle="bold"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_lokasi" />

            <TextView
                android:id="@+id/tv_alamat_lokasi"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="4dp"
                android:text="@string/alamat_rumahku"
                android:textColor="@color/gray_text"
                android:textSize="11sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_rumahku" />

            <TextView
                android:id="@+id/tv_tanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal"
                android:textSize="11sp"
                android:layout_marginTop="68dp"
                android:layout_marginEnd="38dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView1" />
            <TextView
                android:id="@+id/tv_jam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jam"
                android:textColor="@color/gray_text"
                android:textSize="11sp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="38dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_tanggal" />
            <TextView
                android:id="@+id/tv_label_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="6dp"
                android:layout_marginStart="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_alamat_lokasi" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_status"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_status"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_next"
                style="@style/ButtonLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/konfirmasi_pesanan"
                android:textSize="12sp"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_status" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>